--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="ans_correct">Ans Correct: </string>
     <string name="reset_quiz">NEW QUIZ</string>
     <string name="get_ques_url">https://opentdb.com/api.php?amount=10&amp;amp;type=multiple</string>
+    <string name="blank_text"></string>
 </resources>
