Added main logic.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Quizza</string>
     <string name="ques_rem">Ques Remaining: </string>
     <string name="ans_correct">Ans Correct: </string>
-    <string name="reset_quiz">NEW QUIZ</string>
+    <string name="reset_quiz">RESET QUIZ</string>
+    <string name="new_quiz">NEW QUIZ</string>
     <string name="get_ques_url">https://opentdb.com/api.php?amount=10&amp;amp;type=multiple</string>
     <string name="blank_text"></string>
 </resources>
